# atlas

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md
.claude/: settings.json
.github/workflows/: ci.yml  claude.yml  publish-core.yml  publish-node.yml  publish-private-ai-sdk.yml  publish-python.yml  publish-wasm.yml  publish_atls_core_crate.yml
core/: ARCHITECTURE.md  BOOTCHAIN-VERIFICATION.md  Cargo.toml  README.md
core/src/: connect.rs  error.rs  lib.rs  logging.rs  policy.rs  protocol.rs  tdx.rs  verifier.rs
core/src/dstack/: compose_hash.rs  config.rs  default_app_compose.rs  policy.rs  verifier.rs
core/src/tdx/: grace_period.rs  mod.rs
core/tests/: integration_test.rs  tdx_live.rs
core/tests/data/: vllm_docker_compose.yml
examples/: README.md
examples/ai-provider/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
examples/ai-provider/src/: index.ts
examples/ai-provider/test/: index.test.mjs
examples/private-ai-sdk/: README.md  package.json
examples/private-ai-sdk/src/: index.ts
examples/private-ai-sdk/test/: index.test.mjs
node/: Cargo.toml  README.md  atls-fetch.d.ts  atls-fetch.js  index.cjs  index.d.ts  index.js  package.json  test.mjs
node/examples/: README.md  ai-sdk-openai-demo.mjs
node/npm/darwin-arm64/: package.json
node/npm/darwin-x64/: package.json
node/npm/linux-arm64-gnu/: package.json
node/npm/linux-x64-gnu/: package.json
node/npm/win32-arm64-msvc/: package.json
node/npm/win32-x64-msvc/: package.json
node/src/: lib.rs
python/: .gitignore  Cargo.toml  Makefile  README.md  example.py  pyproject.toml
python/src/: lib.rs
python/src/atlas/: __init__.py  _atlas.pyi  policy.py  utils.py
python/src/atlas/httpx/: __init__.py  sync_client.py  transport.py
python/src/atlas/verifiers/: __init__.py  errors.py
python/tests/: conftest.py  test_client.py  test_module_init.py  test_policy.py  test_transport.py
wasm/: Cargo.toml  README.md  package.json
wasm/demo/: ai-sdk-demo.js  ai-sdk.html  index.html  minimal.html  minimal.js
wasm/proxy/: Cargo.toml  Dockerfile  README.md
wasm/proxy/deploy/: BENCHMARK.md  Caddyfile  benchmark.mjs  docker-compose.yml  package-lock.json
wasm/proxy/src/: main.rs
wasm/proxy/tests/: integration.rs
wasm/src/: atls-fetch.d.ts  atls-fetch.js  hyper_io.rs  lib.rs
