[package]
name = "atlas-python"
version = "0.2.0"
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "_atlas"
crate-type = ["cdylib"]

[dependencies]
atlas-rs = { path = "../core" }
pyo3 = { version = "0.24", features = ["extension-module"] }
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util"] }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
once_cell = "1.19"
hex = "0.4"

