[package]
name = "ratls-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ratls-core = { path = "../core" }
futures = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { workspace = true }
serde-wasm-bindgen = "0.6"

[dependencies.web-sys]
version = "0.3"
features = ["WebSocket", "BinaryType", "MessageEvent", "Event"]

[dependencies.js-sys]
version = "0.3"
